[package]
name = "rit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0.62"
